--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-3">
-            <a class="nav-link active" aria-current="page" href="#">首頁</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">首頁</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">服務介紹</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#fee">方案費用</a>
+            <a class="nav-link" href="./payment.html">方案費用</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">常見問題</a>
