--- a/payment.html
+++ b/payment.html
@@ -29,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-3">
-            <a class="nav-link active" aria-current="page" href="#">首頁</a>
+            <a class="nav-link" aria-current="page" href="./index.html">首頁</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">服務介紹</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">方案費用</a>
+            <a class="nav-link active" href="./payment.html">方案費用</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">常見問題</a>
@@ -110,6 +110,46 @@
                   <input type="text" id="address" class="form-control">
                 </div>
               </div>
+              <div class="col-12">
+                <div>
+                  <label for="#" class="form-label">方便聯繫時間</label>
+                  <select class="form-select">
+                    <option value="morning">09:00~12:00</option>
+                    <option value="afternoon" selected>13:00~17:00</option>
+                    <option value="evening">18:00~22:00</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-12">
+                <p for="#" class="form-label">加購服務</p>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" value="addOn1" id="weekClean">
+                  <label class="form-check-label" for="weekClean">
+                    每週一清掃家裡+100
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" value="addOn2" id="massage">
+                  <label class="form-check-label" for="massage">
+                    按摩+50
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" value="addOn3" id="listening">
+                  <label class="form-check-label" for="listening">
+                    聽你說話+150
+                  </label>
+                </div>
+              </div>
+              <div class="col-12 mb-3">
+                <label for="" class="form-label">備註說明</label>
+                <div class="form-floating">
+                  <textarea class="form-control" id="comment" style="height: 86px"></textarea>
+                </div>
+              </div>
+              <div>
+                <button type="submit" class="btn btn-info w-100">選擇方案</button>
+              </div>
             </div>
           </form>
         </div>
@@ -120,7 +160,7 @@
 
 
 
-  <!-- <section class="py-5 bg-secondary">
+  <section class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center fw-bold mb-4">需要其他協助嗎？</h2>
       <ul class="row justify-content-center align-items-center list-unstyled g-4 g-md-3">
@@ -155,7 +195,7 @@
     <p class="mb-0">
       <small>Copyright © 2023 小懶蟲.All rights reserved.</small>
     </p>
-  </footer> -->
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
