img增加w和h.li地方加hover互動

--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheet/all.css">
-  <style>
-    body{
-      font-family: 'Noto Sans TC', sans-serif;
-    }
-  </style>
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <i class="bi bi-record-fill text-info"></i>小懶蟲
+        <i class="bi bi-record-fill text-info fs-4"></i>小懶蟲
       </a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-3">
@@ -38,10 +36,10 @@
             <a class="nav-link" href="./payment.html">方案費用</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">常見問題</a>
+            <a class="nav-link" href="./question.html">常見問題</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="btn btn-info" href="#">方案費用</a>
+            <a class="btn btn-info" href="./payment.html">方案費用</a>
           </li>
       </div>
     </div>
@@ -69,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="./images/info.jpg" class="w-100" alt="">
+          <img src="./images/info.jpg" class="w-100" alt="笑臉" width="547px" height="300px">
         </div>
     </div>
   </section>
@@ -79,8 +77,8 @@
       <h2 class="text-center mb-4 fw-bold">你有這些煩惱嗎？</h2>
       <ul class="row row-cols-1 row-cols-lg-4 g-3 g-lg-4 list-unstyled">
         <li class="col">
-          <div class="card shadow border-0">
-            <div class="card-body text-center py-4">
+          <div class="card shadow border-0 special-hover">
+            <div class="card-body text-center py-4 ">
               <i class="bi bi-trash-fill fs-s-48 text-info"></i>
               <h3 class="h4">追不到垃圾車</h3>
               <p class="text-secondary card-text lh-lg">每天追垃圾很煩嗎？倒個垃圾<br class="d-none d-xl-inline">還要走出門好累對吧？</p>
@@ -88,7 +86,7 @@
           </div>
         </li>
         <li class="col">
-          <div class="card shadow border-0">
+          <div class="card shadow border-0 special-hover">
             <div class="card-body text-center py-4">
               <i class="bi bi-tree-fill fs-s-48 text-info"></i>
               <h3 class="h4">不會照顧盆栽</h3>
@@ -97,7 +95,7 @@
           </div>
         </li>
         <li class="col">
-          <div class="card shadow border-0">
+          <div class="card shadow border-0 special-hover">
             <div class="card-body text-center py-4">
               <i class="bi bi-emoji-frown-fill fs-s-48 text-info"></i>
               <h3 class="h4">很不開心</h3>
@@ -106,7 +104,7 @@
           </div>
         </li>
         <div class="col">
-          <div class="card shadow border-0">
+          <div class="card shadow border-0 special-hover">
             <div class="card-body text-center py-4">
               <i class="bi bi-book fs-s-48 text-info"></i>
               <h3 class="h4">作業不會寫</h3>
@@ -120,14 +118,14 @@
 
   <section class="container py-5" id="fee">
     <h2 class="text-center mb-4 fw-bold">方案費用</h2>
-    <ul class="row row-cols-1 row-cols-lg-3 g-3 list-unstyled">
+    <ul class="row row-cols-1 row-cols-lg-3 g-4 list-unstyled">
       <li class="col">
-        <div class="card border-0 shadow h-100">
+        <div class="card border-0 shadow h-100 special-hover-2">
           <div class="card-header text-secondary text-center fs-5 border-0 fw-bold">
             小小搭懶蟲
           </div>
           <div class="card-body text-center flex-grow-0">
-            <img src="./images/plan01.jpg" class="img-fluid" alt="小小懶蟲">
+            <img src="./images/plan01.jpg" class="img-fluid" alt="小小懶蟲" width="177px" height="155px">
             <p class="text-info mt-3 mb-0">
               NT<strong class="fs-1">298</strong>/月
             </p>
@@ -143,12 +141,12 @@
         </div>
       </li>
       <li class="col">
-        <div class="card border-0 shadow h-100">
+        <div class="card border-0 shadow h-100 special-hover-2">
           <div class="card-header bg-info text-white text-center fs-5 border-0 fw-bold">
             睡一整天囉
           </div>
           <div class="card-body text-center">
-            <img src="./images/plan02.jpg" class="img-fluid" alt="睡覺一整天">
+            <img src="./images/plan02.jpg" class="img-fluid" alt="睡覺一整天" width="196px" height="155px">
             <p class="text-info mt-3 mb-0">
               NT <strong class="fs-1">666</strong>/月
             </p>
@@ -165,12 +163,12 @@
         </div>
       </li>
       <li class="col">
-        <div class="card border-0 shadow h-100">
+        <div class="card border-0 shadow h-100 special-hover-2">
           <div class="card-header text-secondary text-center fs-5 border-0 fw-bold">
             自由自在的人生
           </div>
           <div class="card-body text-center flex-grow-0">
-            <img src="./images/plan03.jpg" class="img-fluid" alt="自由自在人生">
+            <img src="./images/plan03.jpg" class="img-fluid" alt="自由自在人生" width="240px" height="155px">
             <p class="text-info my-4 fw-bold fs-5">
               客製化詢價
             </p>
@@ -191,7 +189,7 @@
       <h2 class="text-center fw-bold mb-4">需要其他協助嗎？</h2>
       <ul class="row justify-content-center align-items-center list-unstyled g-4 g-md-3">
         <li class="col-8 col-md-6 col-lg-3 ">
-          <div class="card border-0 shadow text-center py-2">
+          <div class="card border-0 shadow text-center py-2 special-hover">
             <div class="card-body fs-5">
               <i class="bi bi-telephone-fill text-info pe-1"></i>
               <a href="tel:+886-7-555-666" class="text-decoration-none link-dark stretched-link">07-555-666</a>
@@ -199,7 +197,7 @@
           </div>
         </li>
         <li class="col-8 col-md-6 col-lg-3 ">
-          <div class="card border-0 shadow text-center py-2">
+          <div class="card border-0 shadow text-center py-2 special-hover">
             <div class="card-body fs-5">
               <i class="bi bi-facebook text-info pe-1"></i>
               <a href="#" class="text-decoration-none link-dark stretched-link">我就是個小懶蟲</a>
@@ -207,10 +205,10 @@
           </div>
         </li>
         <li class="col-8 col-md-6 col-lg-3">
-          <div class="card border-0 shadow text-center py-2">
+          <div class="card border-0 shadow text-center py-2 special-hover">
             <div class="card-body fs-5">
               <i class="bi bi-question-lg text-info pe-1"></i>
-              <a href="#" class="text-decoration-none link-dark stretched-link">常見問題</a>
+              <a href="./question.html" class="text-decoration-none link-dark stretched-link">常見問題</a>
             </div>
           </div>
         </li>
