--- a/payment.html
+++ b/payment.html
@@ -11,17 +11,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheet/all.css">
-  <style>
-    body{
-      font-family: 'Noto Sans TC', sans-serif;
-    }
-  </style>
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <i class="bi bi-record-fill text-info"></i>小懶蟲
+        <i class="bi bi-record-fill text-info fs-4"></i>小懶蟲
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,10 +34,10 @@
             <a class="nav-link active" href="./payment.html">方案費用</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">常見問題</a>
+            <a class="nav-link" href="./question.html">常見問題</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="btn btn-info" href="#">方案費用</a>
+            <a class="btn btn-info" href="./payment.html">方案費用</a>
           </li>
       </div>
     </div>
@@ -49,14 +45,14 @@
 
   <header class="py-5 text-center" style="background-image: url(./images/bg_paper.png);">
     <p class="text-info fw-bold fs-5">HAPPY LIFE</p>
-    <h1 class="fw-bold space-1">開始當個小懶蟲</h1>
+    <h1 class="fw-bold">開始當個小懶蟲</h1>
   </header>
 
   <section class="py-5">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
-          <form class="p-lg-5">
+          <form class="p-lg-5 shadow-lg needs-validation" novalidate >
             <h2 class="h4 fw-bold deco-line mb-3">選擇方案</h2>
             <div class="row row-cols-1 row-cols-lg-3 g-2 mb-5">
               <div class="col">
@@ -83,31 +79,46 @@
               <div class="col-lg-6">
                 <div>
                   <label for="firstName" class="form-label">名字</label>
-                  <input type="text" id="firstName" class="form-control">
+                  <input type="text" id="firstName" class="form-control" required>
+                  <div class="invalid-feedback">
+                    請填寫名字
+                  </div>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div>
                   <label for="lastName" class="form-label">姓氏</label>
-                  <input type="text" id="lastName" class="form-control">
+                  <input type="text" id="lastName" class="form-control" required>
+                  <div class="invalid-feedback">
+                    請填寫姓氏
+                  </div>
                 </div>
               </div>
               <div class="col-12">
                 <div>
                   <label for="phoneNumber" class="form-label">手機號碼</label>
-                  <input type="text" id="phoneNumber" class="form-control">
+                  <input type="text" id="phoneNumber" class="form-control" required>
+                  <div class="invalid-feedback">
+                    請填寫可聯繫您的手機號碼
+                  </div>
                 </div>
               </div>
               <div class="col-12">
                 <div>
                   <label for="email" class="form-label">電子郵件</label>
-                  <input type="email" id="email" class="form-control" placeholder="name@example.com">
+                  <input type="email" id="email" class="form-control" placeholder="name@example.com" required>
+                  <div class="invalid-feedback">
+                    請填寫信箱
+                  </div>
                 </div>
               </div>
               <div class="col-12">
                 <div>
                   <label for="address" class="form-label">地址</label>
-                  <input type="text" id="address" class="form-control">
+                  <input type="text" id="address" class="form-control" required>
+                  <div class="invalid-feedback">
+                    請填寫住址
+                  </div>
                 </div>
               </div>
               <div class="col-12">
@@ -165,7 +176,7 @@
       <h2 class="text-center fw-bold mb-4">需要其他協助嗎？</h2>
       <ul class="row justify-content-center align-items-center list-unstyled g-4 g-md-3">
         <li class="col-8 col-md-6 col-lg-3 ">
-          <div class="card border-0 shadow text-center py-2">
+          <div class="card border-0 shadow text-center py-2 special-hover">
             <div class="card-body fs-5">
               <i class="bi bi-telephone-fill text-info pe-1"></i>
               <a href="tel:+886-7-555-666" class="text-decoration-none link-dark stretched-link">07-555-666</a>
@@ -173,7 +184,7 @@
           </div>
         </li>
         <li class="col-8 col-md-6 col-lg-3 ">
-          <div class="card border-0 shadow text-center py-2">
+          <div class="card border-0 shadow text-center py-2 special-hover">
             <div class="card-body fs-5">
               <i class="bi bi-facebook text-info pe-1"></i>
               <a href="#" class="text-decoration-none link-dark stretched-link">我就是個小懶蟲</a>
@@ -181,10 +192,10 @@
           </div>
         </li>
         <li class="col-8 col-md-6 col-lg-3">
-          <div class="card border-0 shadow text-center py-2">
+          <div class="card border-0 shadow text-center py-2 special-hover">
             <div class="card-body fs-5">
               <i class="bi bi-question-lg text-info pe-1"></i>
-              <a href="#" class="text-decoration-none link-dark stretched-link">常見問題</a>
+              <a href="./question.html" class="text-decoration-none link-dark stretched-link">常見問題</a>
             </div>
           </div>
         </li>
@@ -198,5 +209,27 @@
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<script>
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+(function () {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+</script>
 </body>
 </html>
