拿掉反斜線
樣式出不來,有反斜線/，會導致github pages讀不到那個檔案

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/stylesheet/all.css">
+  <link rel="stylesheet" href="stylesheet/all.css">
 
 </head>
 <body>
@@ -44,7 +44,7 @@
       </div>
     </div>
   </nav>
-  <header class="header py-5 px-3 d-flex justify-content-center align-items-lg-center" style="background-image: url(/images/home_bg.jpg);">
+  <header class="header py-5 px-3 d-flex justify-content-center align-items-lg-center" style="background-image: url(./images/home_bg.jpg);">
     <div class="text-white text-center">
       <p class="fs-6 mb-0">你是不是也有夢想</p>
       <h1 class="fw-bold">當個小懶蟲?</h1>
