fix:笑臉圖加img-fluid

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="./images/info.jpg" class="w-100" alt="笑臉" width="547px" height="300px">
+          <img src="./images/info.jpg" class="w-100 img-fluid" alt="笑臉" width="547px" height="300px">
         </div>
     </div>
   </section>
