--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>小懶蟲</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -103,7 +101,7 @@
             </div>
           </div>
         </li>
-        <div class="col">
+        <li class="col">
           <div class="card shadow border-0 special-hover">
             <div class="card-body text-center py-4">
               <i class="bi bi-book fs-s-48 text-info"></i>
@@ -111,7 +109,7 @@
               <p class="text-secondary card-text lh-lg">什麼微積分、程式設計、或是<br class="d-none d-xl-inline">設計稿，不會做也不想做？</p>
             </div>
           </div>
-        </div>
+        </li>
       </ul>
     </div>
   </section>
