fix:BS的CDN移除,手機號碼改為type=tel

--- a/payment.html
+++ b/payment.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>小懶蟲</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,7 +95,7 @@
               <div class="col-12">
                 <div>
                   <label for="phoneNumber" class="form-label">手機號碼</label>
-                  <input type="text" id="phoneNumber" class="form-control" required>
+                  <input type="tel" id="phoneNumber" class="form-control" required>
                   <div class="invalid-feedback">
                     請填寫可聯繫您的手機號碼
                   </div>
