fix:BS的CDN移除,accordion-body內用p標籤包文字

--- a/question.html
+++ b/question.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>小懶蟲</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,9 +58,8 @@
               </h2>
               <div id="questionList01" class="accordion-collapse collapse show">
                 <div class="accordion-body">
-                  蘋果iPhone 15系列發表倒數，各方爆料不斷，近日一家知名配件廠商提前劇透，側面證實新機全系列9色陣容，沒意外的話，準確度極高。
-                  <br>
-                  知名配件品牌imos在官方臉書釋出多張即將推出的iPhone 15系列鏡頭貼宣傳圖片，預告總共推出9色的藍寶石金屬框鏡頭貼，包括iPhone 15 Pro、iPhone 15 Pro Max有鈦銀、鈦灰、鈦藍、鈦黑4色，iPhone 15、iPhone 15 Plus則有淺綠、淺藍、淺粉、淺黃、黑5色。
+                  <p class="mb-0">蘋果iPhone 15系列發表倒數，各方爆料不斷，近日一家知名配件廠商提前劇透，側面證實新機全系列9色陣容，沒意外的話，準確度極高。
+                  知名配件品牌imos在官方臉書釋出多張即將推出的iPhone 15系列鏡頭貼宣傳圖片，預告總共推出9色的藍寶石金屬框鏡頭貼，包括iPhone 15 Pro、iPhone 15 Pro Max有鈦銀、鈦灰、鈦藍、鈦黑4色，iPhone 15、iPhone 15 Plus則有淺綠、淺藍、淺粉、淺黃、黑5色。</p>
                 </div>
               </div>
             </div>
@@ -74,8 +71,10 @@
               </h2>
               <div id="questionList02" class="accordion-collapse collapse">
                 <div class="accordion-body">
-                  （中央社記者陳昱婷台北30日電）慶祝大貓熊「圓圓」19歲生日，台北市立動物園以書為造型特製冰塊蛋糕，還做了一隻頭戴光環、長有翅膀的熊天使來紀念「團團」，而「圓圓」也不負保育員用心，吃得津津有味。
-                  「團團」與「圓圓」在2008年從中國四川來到台北市立動物園，由於「團團」生日在9月1日，「圓圓」則是8月30日，所以每年都會一起慶生。「團團」去年底病逝後，今年是「圓圓」首次獨享生日蛋糕。
+                  <p class="mb-0">
+                    （中央社記者陳昱婷台北30日電）慶祝大貓熊「圓圓」19歲生日，台北市立動物園以書為造型特製冰塊蛋糕，還做了一隻頭戴光環、長有翅膀的熊天使來紀念「團團」，而「圓圓」也不負保育員用心，吃得津津有味。
+                    「團團」與「圓圓」在2008年從中國四川來到台北市立動物園，由於「團團」生日在9月1日，「圓圓」則是8月30日，所以每年都會一起慶生。「團團」去年底病逝後，今年是「圓圓」首次獨享生日蛋糕。
+                  </p>
                 </div>
               </div>
             </div>
@@ -87,7 +86,9 @@
               </h2>
               <div id="questionList03" class="accordion-collapse collapse" >
                 <div class="accordion-body">
-                  數據揭露，Google入門工程師的平均年薪為18.4萬元（約台幣586萬元），Meta以17.9萬元(約台幣570萬元)居次，其他依序是亞馬遜15.9萬元（約台幣506萬元）、蘋果14.2萬元（約台幣452萬元）、微軟14.1萬元(約台幣449萬元)，等於蘋果在該排名中只排到第4名，唯有贏過微軟。
+                  <p class="mb-0">
+                    數據揭露，Google入門工程師的平均年薪為18.4萬元（約台幣586萬元），Meta以17.9萬元(約台幣570萬元)居次，其他依序是亞馬遜15.9萬元（約台幣506萬元）、蘋果14.2萬元（約台幣452萬元）、微軟14.1萬元(約台幣449萬元)，等於蘋果在該排名中只排到第4名，唯有贏過微軟。
+                  </p>
                 </div>
               </div>
             </div>
